@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Version 6.0.1 (SVN branch-6-0):
 ---------------------------
 
+- Fixed the build problem in mapunion.c (#3877)
+
 - Union layer: Fixed the crash when styling source layers using attributes (#3870)
 
 Version 6.0.0 (2011-05-11)
